finished the skeletal structure of the services page. Now i just need to line up everything properly and add borders where I need to. Used AH zoom to solve a problem i was stuck on for 30 minutes and we solved it within 4 minutes and i understand how i did it. in my css code i wasnt calling my section id to display flex and divide the the content into two columns. i was dividing content within 1 div instead of the written content and image itself.

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -199,3 +199,17 @@ footer{
 	display:flex;
 	flex-direction:column;
   }
+
+  /*Section factsabout code goes here*/
+#factsabout{
+	display:flex;
+}  
+.factsaboutservices{
+	display:flex;
+	align-items: center;
+	flex-direction: column;
+	width:49%;
+}
+.fasimg{
+	width:49%;
+}
